<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="Register New Client"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"></TextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_firstname"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="3dp" android:textSize="12sp"
            android:hint="@string/firstname" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_middlename"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_middlename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp" android:textSize="12sp"
                android:hint="@string/middlename" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_lastname"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp" android:textSize="12sp"
                android:hint="@string/lastname" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_bday"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/et_bday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="3dp" android:textSize="12sp"
            android:hint="@string/bdate" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_mobile"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="12sp"
                android:drawablePadding="3dp"
                android:hint="@string/mobile" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tl_email"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_email" android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent" android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/submit2"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>