<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg_sunset_blur"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/btn_step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/white" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/btn_step1"
        android:layout_gravity="center"
        android:background="#16ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/circle_green"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="1"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Login Details"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="3dp"
                    android:hint="@string/username"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="3dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="3dp"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>



            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>